1. finished CRD basic function; 2. integrated persistence mysql service; 3. built backend dashboard apis

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,10 +41,14 @@ spring:
         login-password: druid1210
         login-username: admin
         enabled: true
-      url: jdbc:mysql://localhost:3306/tech_article?useUnicode=true&characterEncoding=UTF-8
+      url: jdbc:mysql://localhost:3306/techlog?useUnicode=true&characterEncoding=UTF-8
       driver-class-name: com.mysql.cj.jdbc.Driver
       username: root
       password: root1210
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
 
 mybatis:
   config-location: classpath:/mybatis/mybatis-config.xml
