--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,7 +49,18 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    pool:
+
+    jedis:
+      pool:
+        max-active: 5     # 如果赋值为-1，则表示不限制；如果pool已经分配了maxActive个jedis实例，则此时pool的状态为exhausted(耗尽)。
+        min-idle: 0       # 连接池中的最小空闲连接，默认值也是0
 
 mybatis:
   config-location: classpath:/mybatis/mybatis-config.xml
   mapper-locations: classpath:/mybatis/mapper/**.xml
+
+#debug: true
